--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 cloudinary==1.33.0
 Django==3.2.4
+django-filter==2.4.0
 django-cloudinary-storage==0.3.0
 djangorestframework==3.12.4
 Pillow==8.2.0
